Fictionalize government references

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <a class="skip-link" href="#main">Skip to main content</a>
 
-  <section class="usa-banner" aria-label="Official website of the United States government">
+  <section class="usa-banner" aria-label="Official site of the United Regions of Elsewhere">
     <div class="wrap">
       <div class="inner">
         <div class="flag" aria-hidden="true">
@@ -27,19 +27,19 @@
             <rect width="76" height="53.85" fill="#3c3b6e"></rect>
           </svg>
         </div>
-        <div class="meta">An official website of the United States government</div>
+        <div class="meta">An official site of the United Regions of Elsewhere</div>
         <button type="button" id="bannerToggle" aria-expanded="false" aria-controls="bannerDetails">Here’s how you know</button>
       </div>
 
       <div class="usa-banner-details" id="bannerDetails">
         <div class="grid">
           <div class="info-card">
-            <div class="badge">.gov</div>
-            <div><strong>Official websites use .gov</strong>A .gov website belongs to an official U.S. government organization.</div>
+            <div class="badge">.ure</div>
+            <div><strong>Official sites use .ure</strong>A .ure site belongs to an official United Regions of Elsewhere organization.</div>
           </div>
           <div class="info-card">
             <div class="badge">🔒</div>
-            <div><strong>Secure .gov websites use HTTPS</strong>A lock or https:// means you’ve safely connected to the .gov website.</div>
+            <div><strong>Secure .ure sites use HTTPS</strong>A lock or https:// means you’ve safely connected to the .ure website.</div>
           </div>
         </div>
       </div>
@@ -53,10 +53,10 @@
   <div class="agency-bar" role="banner">
     <div class="wrap">
       <div class="row">
-        <div class="seal" aria-hidden="true">DOI</div>
-        <div class="agency-title" aria-label="U.S. Department of the Interior, Bureau of Land Management">
-          <div class="top">U.S. DEPARTMENT OF THE INTERIOR</div>
-          <div class="bot">BUREAU OF LAND MANAGEMENT</div>
+        <div class="seal" aria-hidden="true">MOT</div>
+        <div class="agency-title" aria-label="United Regions of Elsewhere Ministry of Outside Things, Bureau of Wandering Lands">
+          <div class="top">MINISTRY OF OUTSIDE THINGS</div>
+          <div class="bot">BUREAU OF WANDERING LANDS</div>
         </div>
         <div class="agency-actions">
           <a href="#need-help">Help</a>
@@ -70,8 +70,8 @@
     <div class="wrap">
       <section class="pagehead" aria-label="Page title and instructions">
         <h1>Online Forest Product Permits</h1>
-        <p>Get a permit to collect forest products on BLM-managed public lands in a few simple steps.</p>
-        <p class="federal-note">Permits obtained through this site are issued by the Bureau of Land Management.</p>
+        <p>Get a permit to collect forest products on Bureau of Wandering Lands-managed public lands in a few simple steps.</p>
+        <p class="federal-note">Permits obtained through this site are issued by the Bureau of Wandering Lands.</p>
 
         <div class="alert" role="status" aria-live="polite">
           <div class="icon" aria-hidden="true">i</div>
@@ -128,7 +128,7 @@
                 </div>
 
                 <div class="row">
-                  <label for="officeInput">BLM office / district <span aria-hidden="true" style="color:var(--danger)">*</span></label>
+                  <label for="officeInput">BWL office / district <span aria-hidden="true" style="color:var(--danger)">*</span></label>
                   <div class="hint">Start typing to filter. Use ↑/↓ to navigate; Enter to select.</div>
                   <div class="combo" id="officeCombo">
                     <input id="officeInput" type="text" autocomplete="off" placeholder="Type to search offices"
@@ -155,7 +155,7 @@
               <button class="step-toggle" type="button" aria-expanded="false">Step 2 · Select a product and quantity</button>
               <div class="step-status" id="status2">Locked</div>
             </div>
-            <div class="lock-note" id="step2LockNote">Select what you’re collecting, then choose a state and BLM office to unlock product selection.</div>
+            <div class="lock-note" id="step2LockNote">Select what you’re collecting, then choose a state and BWL office to unlock product selection.</div>
             <div class="step-body" style="display:none;">
               <div style="color:var(--muted); font-size:14px;">Choose one product, then enter your quantity to continue.</div>
 
@@ -197,9 +197,9 @@
 
 AUTHORITY: 30 U.S.C. 601 et seq.; 43 U.S.C. 1181a; and 43 CFR 5400 (as applicable).
 
-PRINCIPAL PURPOSE: The Bureau of Land Management (BLM) uses the information you provide to identify the permittee, document the authorization to remove vegetative materials from public lands, and administer and enforce permit terms.
+PRINCIPAL PURPOSE: The Bureau of Wandering Lands (BWL) uses the information you provide to identify the permittee, document the authorization to remove vegetative materials from public lands, and administer and enforce permit terms.
 
-ROUTINE USES: The BLM may disclose information consistent with published routine uses for the relevant system of records, and as otherwise authorized by law.
+ROUTINE USES: The BWL may disclose information consistent with published routine uses for the relevant system of records, and as otherwise authorized by law.
 
 EFFECT OF NOT PROVIDING INFORMATION: Providing the requested information is voluntary; however, failure to provide required information may prevent us from issuing your permit.
 </div>
@@ -319,7 +319,7 @@ Replace this demo text with the authoritative terms and conditions used by your 
       <p>
         If Pay.gov is down, wait 15 minutes and try again. You can also complete
         your purchase at a
-        <a href="https://www.blm.gov/office/national-office" target="_blank" rel="noopener">local BLM office</a>.
+        <a href="https://www.blm.gov/office/national-office" target="_blank" rel="noopener">local BWL office (external link)</a>.
       </p>
     </div>
 
@@ -348,7 +348,7 @@ Replace this demo text with the authoritative terms and conditions used by your 
           <p>
             This system does not support online permit lookup. If you cannot locate
             your permit or confirmation email, contact your
-            <a href="https://www.blm.gov/office/national-office" target="_blank" rel="noopener">local BLM office</a>
+            <a href="https://www.blm.gov/office/national-office" target="_blank" rel="noopener">local BWL office (external link)</a>
             during business hours. Staff can help locate your permit using your
             <strong>name and email address</strong>.
           </p>
@@ -372,7 +372,7 @@ Replace this demo text with the authoritative terms and conditions used by your 
         <div class="help-subaccordion-body">
           <p>
             If you believe you were charged more than once, contact your
-            <a href="https://www.blm.gov/office/national-office" target="_blank" rel="noopener">local BLM office</a>
+            <a href="https://www.blm.gov/office/national-office" target="_blank" rel="noopener">local BWL office (external link)</a>
             during business hours. Be prepared to provide your name, email address,
             and any payment confirmation information you received.
           </p>
@@ -390,7 +390,7 @@ Replace this demo text with the authoritative terms and conditions used by your 
           </ul>
           <p>
             If you are still unable to access your permit, contact your
-            <a href="https://www.blm.gov/office/national-office" target="_blank" rel="noopener">local BLM office</a>.
+            <a href="https://www.blm.gov/office/national-office" target="_blank" rel="noopener">local BWL office (external link)</a>.
           </p>
         </div>
       </details>
@@ -402,7 +402,7 @@ Replace this demo text with the authoritative terms and conditions used by your 
     <div class="help-card">
       <div class="eyebrow">Selecting products and availability</div>
       <p>
-        Only BLM offices that offer online permits for the collection type you
+        Only BWL offices that offer online permits for the collection type you
         selected are shown. If an office does not appear, it does not currently
         offer online permits for that collection type. Availability may change
         seasonally.
@@ -414,7 +414,7 @@ Replace this demo text with the authoritative terms and conditions used by your 
       <p>
         For maps, collection area restrictions, seasonal closures, or in-person
         payment options, contact your
-        <a href="https://www.blm.gov/office/national-office" target="_blank" rel="noopener">local BLM office</a>
+        <a href="https://www.blm.gov/office/national-office" target="_blank" rel="noopener">local BWL office (external link)</a>
         during regular business hours.
       </p>
     </div>
@@ -427,13 +427,13 @@ Replace this demo text with the authoritative terms and conditions used by your 
 
   <footer>
     <div class="wrap">
-      <div><strong>forestproducts.blm.gov</strong> — Prototype</div>
+      <div><strong>forestproducts.bwl.ure</strong> — Prototype</div>
       <div class="footer-links" aria-label="Footer links">
-        <a href="https://www.doi.gov/" target="_blank" rel="noopener">Department of the Interior</a>
-        <a href="https://www.doi.gov/about" target="_blank" rel="noopener">About DOI.gov</a>
-        <a href="https://www.doi.gov/pmb/eeo/no-fear-act" target="_blank" rel="noopener">No FEAR Act data</a>
-        <a href="https://www.doioig.gov/" target="_blank" rel="noopener">Office of Inspector General</a>
-        <a href="https://www.usa.gov/" target="_blank" rel="noopener">USA.gov</a>
+        <a href="https://www.doi.gov/" target="_blank" rel="noopener">Ministry of Outside Things (links to doi.gov)</a>
+        <a href="https://www.doi.gov/about" target="_blank" rel="noopener">About the MOT (external)</a>
+        <a href="https://www.doi.gov/pmb/eeo/no-fear-act" target="_blank" rel="noopener">No FEAR Act data (external DOI resource)</a>
+        <a href="https://www.doioig.gov/" target="_blank" rel="noopener">Office of Inspiring Guidance (links to doioig.gov)</a>
+        <a href="https://www.usa.gov/" target="_blank" rel="noopener">URE.gov portal (links to USA.gov)</a>
       </div>
       <div class="smallprint">Data shown is representative demo content.</div>
     </div>
