--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Online Forest Product Permits — Prototype</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" href="images/favicon.ico" />
 </head>
 
 <body>
@@ -347,6 +348,26 @@ Replace this demo text with the authoritative terms and conditions used by your 
     </div>
 
     <div class="help-card">
+      <div class="eyebrow">Selecting products and availability</div>
+      <p>
+        Only BWL offices that offer online permits for the collection type you
+        selected are shown. If an office does not appear, it does not currently
+        offer online permits for that collection type. Availability may change
+        seasonally.
+      </p>
+    </div>
+
+    <div class="help-card">
+      <div class="eyebrow">Maps, closures, and local assistance</div>
+      <p>
+        For maps, collection area restrictions, seasonal closures, or in-person
+        payment options, contact your
+        <a href="https://www.blm.gov/office/national-office" target="_blank" rel="noopener">local BWL office (external link)</a>
+        during regular business hours.
+      </p>
+    </div>
+
+    <div class="help-card">
   <div class="eyebrow">Troubleshooting</div>
 
   <details class="help-accordion">
@@ -420,27 +441,6 @@ Replace this demo text with the authoritative terms and conditions used by your 
     </div>
   </details>
 </div>
-
-
-    <div class="help-card">
-      <div class="eyebrow">Selecting products and availability</div>
-      <p>
-        Only BWL offices that offer online permits for the collection type you
-        selected are shown. If an office does not appear, it does not currently
-        offer online permits for that collection type. Availability may change
-        seasonally.
-      </p>
-    </div>
-
-    <div class="help-card">
-      <div class="eyebrow">Maps, closures, and local assistance</div>
-      <p>
-        For maps, collection area restrictions, seasonal closures, or in-person
-        payment options, contact your
-        <a href="https://www.blm.gov/office/national-office" target="_blank" rel="noopener">local BWL office (external link)</a>
-        during regular business hours.
-      </p>
-    </div>
   </div>
 </aside>
 
