Refactor help section links and text
Updated links to remove '(external link)' text and improved clarity in help sections.

--- a/index.html
+++ b/index.html
@@ -343,26 +343,24 @@ Replace this demo text with the authoritative terms and conditions used by your 
       <p>
         If Pay.gov is down, wait 15 minutes and try again. You can also complete
         your purchase at a
-        <a href="https://www.blm.gov/office/national-office" target="_blank" rel="noopener">local BWL office (external link)</a>.
+        <a href="https://www.blm.gov/office/national-office" target="_blank" rel="noopener">local BWL office</a>.
       </p>
     </div>
 
     <div class="help-card">
-      <div class="eyebrow">Selecting products and availability</div>
+      <div class="eyebrow">Availability</div>
       <p>
-        Only BWL offices that offer online permits for the collection type you
-        selected are shown. If an office does not appear, it does not currently
-        offer online permits for that collection type. Availability may change
-        seasonally.
+        We show only collection types, permits, and offices available online for your selections. 
+        If you don’t see an option, it may not be offered there—or it may be available in person only. 
+        Availability can change.
       </p>
     </div>
 
     <div class="help-card">
-      <div class="eyebrow">Maps, closures, and local assistance</div>
+      <div class="eyebrow">Local help</div>
       <p>
-        For maps, collection area restrictions, seasonal closures, or in-person
-        payment options, contact your
-        <a href="https://www.blm.gov/office/national-office" target="_blank" rel="noopener">local BWL office (external link)</a>
+        If you need help with anything not available through this site—contact your
+        <a href="https://www.blm.gov/office/national-office" target="_blank" rel="noopener">local BWL office</a>
         during regular business hours.
       </p>
     </div>
@@ -392,7 +390,7 @@ Replace this demo text with the authoritative terms and conditions used by your 
           <p>
             This system does not support online permit lookup. If you cannot locate
             your permit or confirmation email, contact your
-            <a href="https://www.blm.gov/office/national-office" target="_blank" rel="noopener">local BWL office (external link)</a>
+            <a href="https://www.blm.gov/office/national-office" target="_blank" rel="noopener">local BWL office</a>
             during business hours. Staff can help locate your permit using your
             <strong>name and email address</strong>.
           </p>
@@ -416,7 +414,7 @@ Replace this demo text with the authoritative terms and conditions used by your 
         <div class="help-subaccordion-body">
           <p>
             If you believe you were charged more than once, contact your
-            <a href="https://www.blm.gov/office/national-office" target="_blank" rel="noopener">local BWL office (external link)</a>
+            <a href="https://www.blm.gov/office/national-office" target="_blank" rel="noopener">local BWL office</a>
             during business hours. Be prepared to provide your name, email address,
             and any payment confirmation information you received.
           </p>
@@ -434,7 +432,7 @@ Replace this demo text with the authoritative terms and conditions used by your 
           </ul>
           <p>
             If you are still unable to access your permit, contact your
-            <a href="https://www.blm.gov/office/national-office" target="_blank" rel="noopener">local BWL office (external link)</a>.
+            <a href="https://www.blm.gov/office/national-office" target="_blank" rel="noopener">local BWL office</a>.
           </p>
         </div>
       </details>
@@ -452,11 +450,11 @@ Replace this demo text with the authoritative terms and conditions used by your 
     <div class="wrap">
       <div><strong>forestproducts.bwl.ure</strong> — Prototype</div>
       <div class="footer-links" aria-label="Footer links">
-        <a href="https://www.doi.gov/" target="_blank" rel="noopener">Ministry of Outside Things (links to doi.gov)</a>
-        <a href="https://www.doi.gov/about" target="_blank" rel="noopener">About the MOT (external)</a>
-        <a href="https://www.doi.gov/pmb/eeo/no-fear-act" target="_blank" rel="noopener">No FEAR Act data (external DOI resource)</a>
-        <a href="https://www.doioig.gov/" target="_blank" rel="noopener">Office of Inspiring Guidance (links to doioig.gov)</a>
-        <a href="https://www.usa.gov/" target="_blank" rel="noopener">URE.gov portal (links to USA.gov)</a>
+        <a href="https://www.doi.gov/" target="_blank" rel="noopener">Ministry of Outside Things</a>
+        <a href="https://www.doi.gov/about" target="_blank" rel="noopener">About the MOT</a>
+        <a href="https://www.doi.gov/pmb/eeo/no-fear-act" target="_blank" rel="noopener">No FEAR Act data</a>
+        <a href="https://www.doioig.gov/" target="_blank" rel="noopener">Office of Inspiring Guidance</a>
+        <a href="https://www.usa.gov/" target="_blank" rel="noopener">URE.gov portal</a>
       </div>
       <div class="smallprint">Data shown is representative demo content.</div>
     </div>
